--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-native-circular-slider": "^1.0.1",
+    "react-native-svg": "^9.3.7",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -21,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-circular-slider-bar": "^1.3.1"
+  }
 }
