--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.8.4",
     "react-native-circular-slider": "^1.0.1",
     "react-native-svg": "^9.3.7",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "waveform-data": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
