--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react-native-circular-slider": "^1.0.1",
     "react-native-svg": "^9.3.7",
     "react-scripts": "2.1.8",
+    "react-wavesurfer": "^0.8.6",
     "waveform-data": "^2.1.2",
+    "wavesurfer": "^1.3.4",
+    "wavesurfer.js": "^2.0.0-beta01",
     "web-audio-beat-detector": "^7.0.40"
   },
   "scripts": {
