--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-rotary-knob-skin-pack": "^1.0.2",
     "react-scripts": "2.1.8",
     "react-wavesurfer": "^0.8.6",
+    "styled-components": "^4.2.0",
     "waveform-data": "^2.1.2",
     "wavesurfer": "^1.3.4",
     "wavesurfer.js": "^2.0.0-beta01",
